--- a/xopichu.theme.css
+++ b/xopichu.theme.css
@@ -12,29 +12,32 @@
 
 /* --- User variables --- */
 
---background-image: url('https://raw.githubusercontent.com/Advyt3/XOPichu/main/assets/bg.png');
+--background-image: url('https://raw.githubusercontent.com/4dvyte/XOPichu/main/assets/bg.png');
 
 --container-text: "Stay Goated";
 
---home-button-icon: url('https://i.pinimg.com/originals/75/0f/57/750f57aef231b96e3f21f3650ac82008.jpg');
+--home-button-icon: url('https://raw.githubusercontent.com/4dvyte/XOPichu/main/assets/home.png');
 
---inbox-bg-img: url('https://raw.githubusercontent.com/Advyt3/XOPichu/main/assets/window-xo.png');
+--inbox-bg-img: url('https://raw.githubusercontent.com/4dvyte/XOPichu/main/assets/window-xo.png');
 
 /* XO logo in user profile / set it to none if you dont want it */
---profile-xo-logo: url('https://raw.githubusercontent.com/Advyt3/XOPichu/main/assets/xo-profile-bg.png');
+--profile-xo-logo: url('https://raw.githubusercontent.com/4dvyte/XOPichu/main/assets/xo-profile-bg.png');
 
 /* Jumping GIF */
---jumping-gif: url('https://raw.githubusercontent.com/Advyt3/XOPichu/main/assets/xo-mini.png');
+--jumping-gif: url('https://raw.githubusercontent.com/4dvyte/XOPichu/main/assets/xo-mini.png');
 
 /* --background-tertiary-alt: url();  */
---background-tertiary-alt: rgba(177, 177, 177, 0.671);
+--background-tertiary-alt: rgb(177, 177, 177);
+
 
 /* Border-radius for the whole theme */
---border-radius: 25px;
-
-/* Blur variable */
---bg-blur: 25px;
+--bg-blur: 20px;
 --bg-blur-secondary: 5px;
+
+
+/* Border-radius for the whole theme */
+
+--border-radius: 25px;
 
 --button: #dba470;
 
@@ -125,6 +128,36 @@
     --deprecated-quickswitcher-input-background: var(--background-primary);
 }
 
+.container__20de0, .recentMentionsPopout__826a9 {
+  background: var(--inbox-bg-img) center/cover no-repeat !important;
+  backdrop-filter: blur(var(--bg-blur-secondary)) !important;
+}
+.scroller_e412fe,
+.scroller_de945b,
+.form_d8a4a1,
+.container__26baa,
+.container_debb33,
+.peopleColumn__0c784,
+:root .container__5c7e7 .container__11d72,
+.nowPlayingColumn_b025fe::before,
+.nowPlayingColumn_b025fe::after,
+.container__037ed::after,
+:root .title_b7d661 {
+  backdrop-filter: blur(var(--bg-blur));
+}
+.scroller__8f066,
+.scroller__3fc84,
+:root .scroller__750f5 .item__183e8,
+.nowPlayingColumn_b025fe,
+.sidebarRegionScroller__8113e,
+.contentRegionScroller__9ae20,
+.contentRegion__0bec1,
+.searchBar__621ec,
+.scroller__89969
+{
+  backdrop-filter: blur(var(--bg-blur-secondary));
+}
+
 :root .bg__12180,
 :root .app_de4237::before,
 :root .app_b1f720::before,
@@ -139,37 +172,8 @@
 :root .bg__12180 {
   background: var(--background-image) center/cover no-repeat !important;
 } 
-.userProfileModalInner__7c87d, .userProfileInner__8065b, .userProfileInnerThemedPremiumWithoutBanner__703b1 {
-  background: var(--profile-xo-logo) !important;
-}
 .container__20de0, .recentMentionsPopout__826a9 {
   background: var(--inbox-bg-img) center/cover no-repeat !important;
-  backdrop-filter: blur(var(--bg-blur-secondary)) !important;
-}
-.scroller__1f96e,
-.form__13a2c,
-.scroller__3d071,
-.membersWrap__90226 .members__9f47b .content__23cab,
-.container_ca50b9,
-.peopleColumn__51df3,
-:root .container__5c7e7 .container__11d72,
-.nowPlayingColumn_f5023f::before,
-.nowPlayingColumn_f5023f::after,
-.container__037ed::after,
-:root .title_b7d661 {
-  backdrop-filter: blur(var(--bg-blur));
-}
-.scroller_f0f183,
-:root .scroller__750f5 .item__183e8,
-.nowPlayingColumn_f5023f,
-.sidebarRegionScroller__1fa7e,
-.contentRegion__0bec1
-{
-  backdrop-filter: blur(var(--bg-blur-secondary));
-}
-.bannerImage__39c51,
-.animatedContainer__341f6 {
-  z-index: 2;
 }
 .wrapper_d281dd:hover .childWrapper__01b9c, .wrapper_d281dd.selected_f5ec8e .childWrapper__01b9c path {
   fill: transparent
@@ -178,6 +182,9 @@
   background: var(--home-button-icon) center/cover no-repeat !important;
   min-width: 60px;
   min-height: 60px;
+}
+.userProfileModalInner__7c87d, .userProfileInner__8065b, .userProfileInnerThemedPremiumWithoutBanner__703b1 {
+  background: var(--profile-xo-logo) !important;
 }
 :root .ready-3BZNWT + .text-2bYgPB::before {
   content: "";
@@ -200,16 +207,13 @@
 .side_b4b3f6 .item__48dda {
   border-radius: var(--border-radius) !important;
 }
-:root .title_b7d661 .children__32014::after,
+:root .title_d4ba1a .children__32014::after,
 :root .membersWrap__90226::before {
   display: none;
 }
 .lookFilled__19298.colorBrand_b2253e,
 :root .container__871ba.checked__6bdb0 {
   background-color: var(--button) !important;
-}
-.autocompleteInner__8785c {
-  background: var(--background-floating);
 }
 
 /* add your code here */
